[gd_scene load_steps=11 format=2]

[ext_resource path="res://Canvas_Layer_HUD.gd" type="Script" id=1]
[ext_resource path="res://KurriIslandCapsPERSONAL-Thin.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 78
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 43
outline_size = 1
outline_color = Color( 0.862745, 0.784314, 0.152941, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 47
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 27
outline_size = 1
outline_color = Color( 0.92549, 0.933333, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="score_label" type="Label" parent="."]
margin_left = 440.0
margin_top = 16.0
margin_right = 552.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 544.0
margin_top = 16.0
margin_right = 592.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 416.0
margin_top = 192.0
margin_right = 606.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 3 )
text = "FETCH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="squirrel" type="Label" parent="."]
margin_left = 320.0
margin_top = 88.0
margin_right = 709.0
margin_bottom = 131.0
grow_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "GET THE SQUIRRELS!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="."]
margin_left = 400.0
margin_top = 448.0
margin_right = 624.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 5 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "start button pushed
"
}

[node name="times_up" type="Label" parent="."]
margin_left = 408.0
margin_top = 224.0
margin_right = 619.0
margin_bottom = 281.0
custom_fonts/font = SubResource( 6 )
text = "TIMES UP!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_keys" type="Label" parent="."]
margin_left = 336.0
margin_top = 384.0
margin_right = 692.0
margin_bottom = 424.0
custom_fonts/font = SubResource( 7 )
text = "use arrow keys to fetch the ball"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ready" type="Label" parent="."]
anchor_right = 0.07
anchor_bottom = 0.04
margin_left = 432.0
margin_top = 104.0
margin_right = 519.32
margin_bottom = 140.0
custom_fonts/font = SubResource( 8 )
text = "READY?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
